--- a/{{cookiecutter.project_name}}/.gitignore
+++ b/{{cookiecutter.project_name}}/.gitignore
@@ -6,7 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Distribution / packaging / Venv
 .Python
 env/
 build/
@@ -24,16 +24,15 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
+.venv/
+venv/
+ENV/
 pip-log.txt
 pip-delete-this-directory.txt
+
+# PyInstaller
+*.manifest
+*.spec
 
 # Unit test / coverage reports
 htmlcov/
@@ -51,8 +50,8 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
+# Django stuff (potentially remove if not relevant to template goal)
+# *.log
 local_settings.py
 
 # Flask stuff:
@@ -83,13 +82,11 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-# dotenv
-.env
+# dotenv / Environment Files
+.env*
+!.env.sample
 
-# virtualenv
-.venv
-venv/
-ENV/
+# virtualenv - Already covered by .venv/ etc. above
 
 # Spyder project settings
 .spyderproject
@@ -101,10 +98,35 @@ ENV/
 # mkdocs documentation
 /site
 
-# mypy
+# mypy / Type Checking
 .mypy_cache/
 
 # IDE settings
 .vscode/
 .idea/
+
+# OS generated files
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Log files
+*.log
+
+# Other
+*.swo
+*.swp
 
