--- a/{{cookiecutter.project_name}}/pytest.ini
+++ b/{{cookiecutter.project_name}}/pytest.ini
@@ -14,4 +14,4 @@ asyncio_default_fixture_loop_scope = function
 testpaths = tests
 
 # Optional: Add default command-line options
-# addopts = -vv --cov={{cookiecutter.project_slug}} --cov-report=term-missing 
+# addopts = -vv --cov=evaitools --cov-report=term-missing
