--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "{{cookiecutter.project_slug}}"
-version = "{{cookiecutter.version}}"
+version = "0.1.0"
 description = "{{cookiecutter.description}}"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -21,6 +21,7 @@ dependencies = [
     "tenacity",
     "requests>=2.31.0",
     "markdown>=3.5.0",
+    "evaitools",
 ]
 
 
@@ -47,25 +48,26 @@ build-backend = "setuptools.build_meta"
 {{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli.cli:app"
 
 
-# Mypy
-# ----
 
-[tool.mypy]
-files = "."
-python_version = "3.12"
+[tool.ruff]
+line-length = 180
 
+[tool.ruff.lint]
+select = [
+    "E",
+    "F",
+    "I",
+    "UP",
+]
+ignore = [
+    "E203",
+]
 
-strict = true
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-warn_unreachable = true
-warn_no_return = true
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "lf"
 
-[[tool.mypy.overrides]]
-# Don't require test functions to include types
-module = "tests.*"
-allow_untyped_defs = true
-disable_error_code = "attr-defined"
-
+[tool.uv.sources]
+evaitools = { path = "../../evaitools", editable = true }
